--- a/DataHappy/DataHappy.csproj
+++ b/DataHappy/DataHappy.csproj
@@ -19,4 +19,12 @@
     <ProjectReference Include="..\DataHappyML.Model\DataHappyML.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Images\A1.jpg" />
+  </ItemGroup>
+
 </Project>
